fix: 최근 조회 시 NPE 방지